chore: add underline to links

--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -251,6 +251,11 @@ body {
   .ProseMirror-separator {
     display: none;
   }
+
+  a {
+    text-decoration: underline;
+    text-underline-offset: 2px;
+  }
 }
 
 .react-tweet-theme {
