--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -258,6 +258,14 @@ body {
   }
 }
 
+.tiptap p.is-editor-empty:first-child::before {
+  color: var(--muted-foreground);
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
 .react-tweet-theme {
   margin: 0 !important;
 }
