feat(#389): mark edited messages and add Tooltip with data

--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -277,6 +277,10 @@ body {
   }
 }
 
+.msg-content > *:nth-last-child(2) {
+  display: inline;
+}
+
 .react-tweet-theme {
   margin: 0 !important;
 }
